[package]
name = "basis-universal"
version = "0.3.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/basis-universal-rs"
homepage = "https://github.com/aclysma/basis-universal-rs"
description = "Bindings for the basis-universal Supercompressed GPU Texture Codec by Binomial"
keywords = ["game", "basis-universal", "texture", "compression", "gpu"]
categories = ["game-development", "graphics", "api-bindings", "compression", "encoding"]

[dependencies]
basis-universal-sys = { version = "0.3.1", path = "../basis-universal-sys",default-features = false }
bitflags = "2"

[dev-dependencies]
image = "0.23.13"
lz4 = "1.23"
[features]
default = ["encoding", "transcoding"]
encoding = ["basis-universal-sys/encoding"]
transcoding = ["basis-universal-sys/transcoding"]

